squash bugs

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -104,7 +104,7 @@ body {
   margin-bottom: 3px;
   text-align: center !important;
   padding-left: 10px;
-  color: #E2DE00;
+  color: white;
 }
 
 #page-container {
@@ -334,6 +334,15 @@ padding-left: 15px;
     height: 100%;
 }
 
+.layerBackGroup {
+    background-color: rgba(46, 47, 49, 0.66);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .navbar-default .navbar-brand {
   color:#E2DE00;
   font-size: 18px;
@@ -470,6 +479,11 @@ md-card md-card-title md-card-title-text {
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
+
+  position: relative;
+  height: 200px;
+  width: 100%;
+  line-height: 200px;
 }
 
 #flagDiv {
@@ -479,11 +493,11 @@ md-card md-card-title md-card-title-text {
 }
 
 .toast-message {
-   color: #E2DE00;
+   color: white;
 }
 
 .toast-info {
-  background-color: #664659;
+  background-color: #353535;
 }
 
 .md-dialog-content {
@@ -513,4 +527,24 @@ md-dialog md-dialog-content:not([layout=row]) > *:first-child:not(.md-subheader)
 
 .btn-social {
   width: 75%;
+}
+
+.header-image {
+  height: 150px;
+  display: inline-block;
+  width: 150px;
+  vertical-align: middle;
+  margin-right: 15px;
+  border-radius: 100%;
+  border: 3px solid white;
+  box-shadow: 1px 1px 2px black;
+
+}
+
+#group-name {
+  display: inline-block;
+  vertical-align: middle;
+}
+.editGroup {
+  float: left;
 }
